--- a/HaierOven/CookStarDetailTopView.xib
+++ b/HaierOven/CookStarDetailTopView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -251,6 +251,11 @@
                 <outlet property="bottomView" destination="WfH-VC-cPF" id="ZE6-pV-eBp"/>
                 <outlet property="chickMoreLabel" destination="2Ar-1k-Yqm" id="83H-uF-odg"/>
                 <outlet property="cookBookLabel" destination="L2a-a8-yNU" id="5IT-fA-d9i"/>
+                <outlet property="descriptionLabel" destination="6ll-0j-BJu" id="kxq-cE-lJ8"/>
+                <outlet property="followButton" destination="haW-vc-bkC" id="bZs-6i-f74"/>
+                <outlet property="levelImageView" destination="34w-En-m8s" id="Chi-ch-A03"/>
+                <outlet property="nameLabel" destination="LyV-H2-fGX" id="6P2-wq-ccf"/>
+                <outlet property="signatureLabel" destination="RQL-Vd-Cvz" id="pTo-pR-wOk"/>
                 <outlet property="studyCook" destination="8Iz-Mb-QEO" id="wXT-H9-Rwt"/>
                 <outlet property="vedioImage" destination="vdx-MB-Bft" id="BY5-8W-ae9"/>
             </connections>
